// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton rendering renders expected elements 1`] = `
<button
  aria-label="Copy"
  className="CopyButton TestClass"
  id="test-id"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  type="button"
>
  <SvgIcon
    icon={
      {
        "icon": [],
        "iconName": "copy",
        "prefix": "far",
      }
    }
  />
</button>
`;

exports[`CopyButton rendering renders expected elements when className is not set 1`] = `
<button
  aria-label="Copy"
  className="CopyButton"
  id="test-id"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  type="button"
>
  <SvgIcon
    icon={
      {
        "icon": [],
        "iconName": "copy",
        "prefix": "far",
      }
    }
  />
</button>
`;

exports[`CopyButton rendering renders expected elements when disabled is true and className is not set 1`] = `
<span
  aria-disabled="true"
  aria-label="Copy"
  className="CopyButton"
  id="test-id"
  onMouseEnter={[Function]}
>
  <SvgIcon
    icon={
      {
        "icon": [],
        "iconName": "copy",
        "prefix": "far",
      }
    }
  />
</span>
`;

exports[`CopyButton rendering renders expected elements when disabled is true and className is set 1`] = `
<span
  aria-disabled="true"
  aria-label="Copy"
  className="CopyButton TestClass"
  id="test-id"
  onMouseEnter={[Function]}
>
  <SvgIcon
    icon={
      {
        "icon": [],
        "iconName": "copy",
        "prefix": "far",
      }
    }
  />
</span>
`;
